syntax = "proto3";

package spqr;

option go_package = "spqr/proto";

import "google/protobuf/empty.proto";

message Shard {
  string id = 1;
  repeated string hosts = 2;
}

message ShardInfo {
  string id = 1;
  repeated string hosts = 2;
}

service ShardService {
  rpc ListShards (google.protobuf.Empty) returns (ListShardsReply) {}
  rpc AddDataShard (AddShardRequest) returns (google.protobuf.Empty) {}
  rpc AddWorldShard (AddWorldShardRequest) returns (google.protobuf.Empty) {}
  rpc GetShard (ShardRequest) returns (ShardReply) {}
}

message ShardReply {
  Shard shard = 1;
}

message ShardRequest {
  string id = 1;
}

message ListShardsReply {
	repeated Shard shards = 1;
}

message AddShardRequest {
  Shard shard = 1;
}

message AddWorldShardRequest {
  Shard shard = 1;
}